kustomizations/webapp/config/base/deployment_app.yaml
# Source: app-template/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: app
    app: app
  name: app
spec:
  replicas: 1
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app
        app: app
    spec:
      containers:
      - name: app
        image: nginxdemos/nginx-hello:0.2
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 200m
            memory: 64Mi
          requests:
            cpu: 100m
            memory: 32Mi
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: "/healthz"
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: "/healthz"
            port: 8080
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 10
      serviceAccountName: app
