kustomizations/webapp/config/base/service_app.yaml
# Source: app-template/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app # kpt-set: ${app-name}
  labels:
    app.kubernetes.io/name: sample-app # kpt-set: ${app-name}
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: sample-app # kpt-set: ${app-name}
