kustomizations/webapp/config/base/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
spec:
  rules:
  - http:
      paths:
      - path: /some-app/ # kpt-set: /${app-name}/
        pathType: Prefix
        backend:
          service:
            name: app
            port:
              number: 8080
